assets/css/mainStyles.css
/* CLEARFIX HACK */
.clearfix::after {
    content: "";
    clear: both;
    display: block;
}

/* FONTS */
h1, h2, h3 {
    font-family: Georgia, Times, 'Times New Roman', serif;
}

h2, h3 { 
    color: #4aaaa5;
}

p, li, label, button {
    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
    color: #777777;
}

/* NEW NAV */

body {
    max-height: 100vh;
  } 
  
  #nav-container > nav > ul {
    list-style-type: none;
  }
  
  /* NAVIGATION */
  #nav-background {
    position: fixed;
    top: 0;
    z-index: 9000;
    width: 100%;
    background-color: white;
    border-bottom: 1px solid #ddd;
    /*
    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.2);
    */
  }
  
  #nav-container {

    display: flex;
    max-width: 1000px;
    margin: 0 auto;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    font-family: Arial, Helvetica, sans-serif;
  }
  
  #nav-header {
  
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-box-align: center;
    -webkit-align-items: center;
    -ms-flex-align: center;
    align-items: center;
  }
  
  #nav-logo {
    color: #444;
    text-decoration: none;
  }
  #nav-logo:hover {
    color: #666;
  }
  
  .nav-ul {
    display: flex;
    max-width: 700px;
  }
  
  .nav-ul > li {
    display: flex;
  }
  
  .nav-link {
    -webkit-box-flex: 1;
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    color: #444;
    text-decoration: none;
    font-weight: 600;
    font-size: 1.2rem;
    -webkit-transition: 200ms;
    transition: 200ms;
  }
  
  .nav-link:hover {
    background-color: #f1f1f1;
  }
  
  .active-link {
    background-color: #f1f1f1;
  }
  
  /* END NAVIGATION */
  
  
  /* MOBILE MENU */
  @media screen and (max-width: 700px) {
    
    #nav-container {
      -webkit-box-orient: vertical;
      -webkit-box-direction: normal;
      -webkit-flex-direction: column;
      -ms-flex-direction: column;
      flex-direction: column;
      text-align: center;
    }
    
    #nav-menu-button {
      padding: 1rem;
      background-color: #f1f1f1;
      cursor: pointer;
    }
    
    .nav-ul {
      display: block;
      -webkit-box-orient: vertical;
      -webkit-box-direction: normal;
      -webkit-flex-direction: column;
      -ms-flex-direction: column;
      flex-direction: column;
      overflow-y: scroll;
      direction: rtl;
      max-height: 80vh;
    }
    
    .hide-ul {
      max-height: 0vh;
    }
    
    .nav-link {
      padding: 1rem 0;
      font-size: 1.3rem;
      border-bottom: 1px solid #f4f4f4;
    }
  }
  /* END MOBILE MENU */
  
  /* DESKTOP MENU */
  @media screen and (min-width: 701px) {
    
    #nav-menu-button {
      display: none;
    }
    
    .nav-link {
      padding: 1rem 1.5rem;
    }
  }
  
  /* This moves the logo so that it's not touching the left side */
  @media screen and (max-width: 1040px) {
    #nav-logo {
      margin-left: 1rem;
    }
}
  

/* HEADER SECTION
#header {
    background-color: #ffffff;
    max-width: 960px;
    border-bottom: 2px #cccccc; 
    margin: 0 auto;
    margin-top: 10px;
}

#header h1 {
    background: #4aaaa5;
    height: 90px;
    width: 250px;
    color: #fff;
    text-align: center;
    line-height: 90px;
    font-size: 50px; 
    display: inline-block;
    float: left;
}

#header ul {
    height: 90px;
    line-height: 90px;
    float: right; 
}

#header li {
    display: inline-block;
    padding: 0 12px 0 12px;
}

.nav a {
    text-decoration: none;
    color: inherit;
}

.nav a:hover {
    color: #585858
} */



/* BACKGROUND IMAGE */
body {
    background: url('../images/dust_scratches.png');
    background-repeat: no-repeat;
    background-position: center center;
    background-attachment: fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

/* ContentArea Width */
#contentArea {
    width: 960px;
    margin: auto;
} 

/* MAIN CONTENT SECTION */
#mainContent {
    width: 650px;
    background: #ffffff;
    border: 2px solid #dddddd;
    float: left;
    overflow: auto;
    margin-top: 30px;
    display: inline-block;
    
}

#mainContent h2 {
    font-size: 40px;
    margin: 20px 0 20px 20px;
}

#mainContent img {
    height: 200px;
    width: 200px;
    margin-bottom: 10px;
    margin: 0 20px 0 20px;
    float: left;
}

#mainContent p {
    line-height: 1.5;
    margin: 0 20px 20px 20px;
    width: 90%;
 
}

hr {
    display: block;
    height: 10px;
    border: 0;
    border-top: 2px solid #ccc;
    margin: 20px;
    padding: 0;
    width: 80%;
}

/* FORM SECTION */
#form {
    
}
input, textarea  {
    width: 80%;
    padding: 10px;
    margin-left: 20px;
    border-radius: 4px;
    resize: none;
    outline: none;
    border: 1px solid #dddddd;
    padding: 15px;

}

input[type=text]:hover, input[type=email]:hover, #msg:hover {
    border: 2px solid rgb(124, 124, 124);
}

input[type=text]:focus, input[type=email]:focus, #msg:focus {
    border: 2px solid rgb(124, 124, 124);
}

label {
    display: block;
    padding: 10px;
    margin-left: 10px;
    margin-top: 10px;
}

textarea {
    height: 150px;
}
button {
    width: 100px;
    height: 50px;
    line-height: 50px;
    background: #4aaaa5;
    color: #ffffff;
    font-size: 20px;
    margin: 20px 0 20px 20px;
    cursor: pointer;
    vertical-align: middle;
    text-align: center;
    border: none;
}


button:hover {
    background-color: #fff;
    color: #4aaaa5;
    border: 2px solid #4aaaa5;
    transition: all ease 0.7s;
}

/* PORTFOLIO GALLERY SECTION */
.grid {
    display: grid;
    grid-template-columns: 200px 200px;
    grid-auto-rows: 200px;
    grid-gap: 15px 15px;
    margin-left: 10px;
    position: relative;
}

#mainContent .grid p {
    max-width: 200px;
    height: 50px;
    background-color: #4aaaa5;
    color: #ffffff;
    text-align: center;
    position: absolute;
    top: 140px;
    line-height: 50px;
}

#mainContent .grid p:nth-child(4)  {
    left: 215px;
}
#mainContent .grid p:nth-child(6)  {
    top: 355px;
}
#mainContent .grid p:nth-child(8)  {
    top: 355px;
    left: 215px;
}
#mainContent .grid p:nth-child(10)  {
    top: 570px;
}

/* SIDEBAR SECTION */
#sidebar {
    margin-top: 30px;
    width: 270px;
    height: 270px;
    background: #ffffff;
    border: 2px solid #dddddd;
    float: right;
    overflow: auto;
}

#sidebar h3 {
    font-size: 30px;
    margin: 20px 0 20px 20px;
}

#sidebar img {
    height: 55px;
    width: 55px;
}

#sidebar ul {
    margin-left: 20px;
}
#sidebar li {
    display: inline;
    padding: 10px;
}

/* FOOTER SECTION */

html {
    position: relative;
    min-height: 100%;
  }
  body {
    /* Margin bottom by footer height */
    margin-bottom: 90px;
    margin-top: 40px;
  }
  #footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    /* Set the fixed height of the footer here */
    height: 90px;
    background-color: #666666;
    border-top: 7px solid #4aaaa5;
  }

  #footer p {
    text-align: center;
    line-height: 90px;
    color: #dddddd;
}



/* TABLET MEDIA QUERY */

@media screen and (max-width: 768px) {
    
    #sidebar {
      float:none;
      display: inline-block;
      position: static;
      width: 768px;
    }

    #mainContent {
        float: none;
        display: inline-block;
        position: static;
        width: 768px;

    }
    #contentArea {
        width: 768px;
        margin: auto;

    }
    #footer {
        position: relative;
    }
  }

  @media screen and (max-width: 640px) {
    
    #sidebar {
      float:none;
      display: inline-block;
      position: static;
      width: 640px;
    }

    #mainContent {
        float: none;
        display: inline-block;
        position: static;
        width: 640px;

    }
    #contentArea {
        max-width: 640px;
        margin: auto;

    }
    #contentArea img {
        float: none;

    }
    #contentArea p {
        float: none;
    }
    #footer {
        position: relative;
    }
  }

